added styling to score and randomized the target score

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,9 @@ h1 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
 }
+
+.stats {
+    font-weight: bold;
+    font-size: 20px;
+    color: teal;
+}
